# HW_Python_Core_07

clean_folder/: LICENSE  README.md  pyproject.toml
clean_folder/src/clean_folder/: clean.py
clean_folder/src/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
