[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean_folder"
version = "0.0.1"
authors = [
  { name="Oleh Kondratenko", email="kondrat1206@gmail.com" },
]
description = "App for clean target folder"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]